refactor Interpreter