@@ -1,74 +1,31 @@
 package io.geekya215.lava.interpreter;
 
 
-import io.geekya215.lava.Env;
-import io.geekya215.lava.Expr;
+import io.geekya215.lava.common.Option;
 import io.geekya215.lava.exception.EvalException;
+import io.geekya215.lava.parser.Expr;
+import io.geekya215.lava.tokenizer.Keywords;
+import io.geekya215.lava.tokenizer.Operators;
+import io.geekya215.lava.tokenizer.Token;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
 import java.util.function.BiPredicate;
 import java.util.function.BinaryOperator;
-import java.util.function.Function;
 
-public class Interpreter {
-    private static final Env nativeEnv = new Env(Optional.empty(), new HashMap<>());
+
+public final class Interpreter {
+    private static final Env nativeEnv = new Env(Option.none(), new HashMap<>());
     private static final Env runtimeEnv;
 
+    public static final class BuiltinValue {
+        public static final Expr TRUE = new Expr.Atom(new Token.Symbol("#t"));
+        public static final Expr FALSE = new Expr.Atom(new Token.Symbol("#f"));
+        public static final Expr NIL = new Expr.Vec(List.of());
+    }
+
     static {
-        nativeEnv.set("#t", BuiltinValue.TRUE);
-        nativeEnv.set("#f", BuiltinValue.FALSE);
-
-        nativeEnv.set(NativeFunctions.PLUS, new Expr.NativeFunc("+", applyArithmetic((a, b) -> a + b), nativeEnv));
-        nativeEnv.set(NativeFunctions.MINUS, new Expr.NativeFunc("-", applyArithmetic((a, b) -> a - b), nativeEnv));
-        nativeEnv.set(NativeFunctions.MUL, new Expr.NativeFunc("*", applyArithmetic((a, b) -> a * b), nativeEnv));
-        nativeEnv.set(NativeFunctions.DIV, new Expr.NativeFunc("/", applyArithmetic((a, b) -> a / b), nativeEnv));
-
-        nativeEnv.set(NativeFunctions.GT, new Expr.NativeFunc(">", applyComparator((a, b) -> a > b), nativeEnv));
-        nativeEnv.set(NativeFunctions.GTEQ, new Expr.NativeFunc(">=", applyComparator((a, b) -> a >= b), nativeEnv));
-        nativeEnv.set(NativeFunctions.LT, new Expr.NativeFunc("<", applyComparator((a, b) -> a < b), nativeEnv));
-        nativeEnv.set(NativeFunctions.LTEQ, new Expr.NativeFunc("<=", applyComparator((a, b) -> a <= b), nativeEnv));
-        nativeEnv.set(NativeFunctions.EQ, new Expr.NativeFunc("=", args -> {
-            if (args.size() == 2) {
-                return Objects.equals(args.get(0), args.get(1)) ? BuiltinValue.TRUE : BuiltinValue.FALSE;
-            }
-            throw new EvalException("expected 2 args for =");
-        }, nativeEnv));
-
-        nativeEnv.set(NativeFunctions.CAR, new Expr.NativeFunc("car", args -> {
-            if (args.size() == 1 && args.get(0) instanceof Expr.List l) {
-                var _l = l.value();
-                return _l.isEmpty() ? l : _l.get(0);
-            }
-            throw new EvalException("cannot use car on non-list value");
-        }, nativeEnv));
-
-        nativeEnv.set(NativeFunctions.CDR, new Expr.NativeFunc("cdr", args -> {
-            if (args.size() == 1 && args.get(0) instanceof Expr.List l) {
-                var _l = l.value();
-                return _l.isEmpty() ? l : new Expr.List(_l.subList(1, _l.size()));
-            }
-            throw new EvalException("cannot use cdr on non-list value");
-        }, nativeEnv));
-
-        nativeEnv.set(NativeFunctions.CONS, new Expr.NativeFunc("cons", args -> {
-            if (args.size() == 2 && args.get(1) instanceof Expr.List(List<Expr> l)) {
-                var res = new ArrayList<>(l);
-                res.addFirst(args.get(0));
-                return new Expr.List(res);
-            }
-            throw new EvalException("invalid use of 'cons'");
-        }, nativeEnv));
-
-        nativeEnv.set(NativeFunctions.LIST, new Expr.NativeFunc("list", Expr.List::new, nativeEnv));
-
-        nativeEnv.set(NativeFunctions.BEGIN, new Expr.NativeFunc("begin", args -> {
-            if (args.isEmpty()) {
-                throw new EvalException("invalid use of 'begin'");
-            } else {
-                return args.get(args.size() - 1);
-            }
-        }, nativeEnv));
-
         runtimeEnv = Env.extend(nativeEnv);
     }
 
@@ -78,156 +35,123 @@ public class Interpreter {
 
     public static Expr eval(Expr expr, Env env) {
         return switch (expr) {
-            case Expr.Quote quote -> quote.expr();
-            case Expr.Number number -> number;
-            case Expr.Symbol(String name) -> {
-                yield env
-                    .get(name)
-                    .orElseThrow(() -> new EvalException("attempted to access undefined variable: " + name));
-            }
-            case Expr.List(List<Expr> list) -> {
-                // Todo
-                // change to immutable list
-                if (list.isEmpty()) {
-                    yield new Expr.List(new ArrayList<>());
-                }
-
-                var head = list.get(0);
-                var size = list.size();
-                var tail = list.subList(1, size);
-
-                // eval keyword
-                if (head instanceof Expr.Symbol(String symbolName)) {
-//                    var symbolName = sym.value();
-
-                    if (Objects.equals(symbolName, Keywords.IF)) {
-                        if (size == 4) {
-                            var condition = tail.get(0);
-                            var then = tail.get(1);
-                            var alt = tail.get(2);
-                            yield eval(condition, env) == BuiltinValue.TRUE ? eval(then, env) : eval(alt, env);
-                        } else {
-                            throw new EvalException("invalid usage of 'if'");
-                        }
-                    }
-
-                    if (Objects.equals(symbolName, Keywords.COND)) {
-                        for (var branch : tail) {
-                            if (branch instanceof Expr.List(List<Expr> l) && l.size() == 2) {
-                                var condition = l.get(0);
-                                var then = l.get(1);
-                                if (condition instanceof Expr.Symbol(String s) && Objects.equals(s, Keywords.ELSE)) {
-                                    yield eval(then, env);
-                                }
-
-                                if (eval(condition, env) == BuiltinValue.TRUE) {
-                                    yield eval(then, env);
-                                }
-                            } else {
-                                throw new EvalException("invalid usage of 'cond'");
-                            }
-                        }
-                        yield BuiltinValue.FALSE;
-                    }
-
-                    if (Objects.equals(symbolName, Keywords.MATCH)) {
-                        if (size == 3 && tail.get(1) instanceof Expr.List(List<Expr> patterns)) {
-                            var e = eval(tail.get(0), env);
-                            for (var pattern : patterns) {
-                                if (pattern instanceof Expr.List(List<Expr> p) && p.size() == 2) {
-                                    if (Objects.equals(p.get(0), e)
-                                        || (p.get(0) instanceof Expr.Symbol(String d) && Objects.equals(d, Keywords.UNDERSCORE))) {
-                                        yield eval(p.get(1), env);
-                                    }
-                                } else {
-                                    throw new EvalException("invalid usage of 'match'");
-                                }
-                            }
-                        } else {
-                            throw new EvalException("invalid usage of 'match'");
-                        }
-                    }
-
-                    if (Objects.equals(symbolName, Keywords.DEFINE)) {
-                        if (size == 3 && tail.get(0) instanceof Expr.Symbol(String s)) {
-                            var value = eval(tail.get(1), env);
-                            env.set(s, value);
-                            yield value;
-                        } else {
-                            throw new EvalException("invalid usage of 'define'");
-                        }
-                    }
-
-                    if (Objects.equals(symbolName, Keywords.EVAL)) {
-                        if (size == 2) {
-                            yield eval(eval(tail.get(0), env), env);
-                        } else {
-                            throw new EvalException("invalid usage of 'eval'");
-                        }
-                    }
-
-                    if (Objects.equals(symbolName, Keywords.QUOTE)) {
-                        if (size == 2) {
-                            yield tail.get(0);
-                        } else {
-                            throw new EvalException("invalid usage of 'quote'");
-                        }
-                    }
-
-                    if (Objects.equals(symbolName, Keywords.LAMBDA)) {
-                        if (size == 3 && tail.get(0) instanceof Expr.List(List<Expr> raw)) {
-                            var params = raw.stream().map(p -> {
-                                if (p instanceof Expr.Symbol(String s)) {
-                                    return s;
-                                } else {
-                                    throw new EvalException("expected symbol value, got " + p);
-                                }
-                            }).toList();
-                            var body = tail.get(1);
-                            yield new Expr.Lambda(params, body, env);
-                        } else {
-                            throw new EvalException("invalid usage of 'lambda'");
-                        }
-                    }
-
-                    if (Objects.equals(symbolName, Keywords.MACRO)) {
-                        if (size == 3
-                            && tail.get(0) instanceof Expr.List(List<Expr> raw)
-                            && raw.stream().allMatch(p -> p instanceof Expr.Symbol)) {
-                            var params = raw.stream().map(p -> {
-                                if (p instanceof Expr.Symbol(String s)) {
-                                    return s;
-                                } else {
-                                    throw new EvalException("expected symbol value, got " + p);
-                                }
-                            }).toList();
-                            var body = tail.get(1);
-                            yield new Expr.Macro(params, body, env);
-                        } else {
-                            throw new EvalException("invalid usage of 'macro'");
-                        }
-                    }
-
-                    // function call by name
+            case Expr.Quote(Expr quote) -> quote;
+            case Expr.Atom(Token tok) -> {
+                if (tok instanceof Token.Symbol(String symbolName)) {
                     yield env.get(symbolName)
-                        .map(f -> application(f, symbolName, tail, env))
-                        .orElseThrow(() -> new EvalException("attempted to call undefined function: " + symbolName));
+                            .getOrThrow(() -> new EvalException("attempted to access undefined variable: " + symbolName));
+                } else {
+                    // Todo
+                    // how to display other tokens?
+                    yield expr;
+                }
+            }
+            case Expr.Vec(List<Expr> exprs) -> {
+                if (exprs.isEmpty()) {
+                    yield new Expr.Vec(new ArrayList<>());
                 }
 
-                // immediately call function or macro expand
-                var callable = eval(head, env);
-                var args = tail.stream().map(e -> eval(e, env)).toList();
-                yield application(callable, "[dynamic]", args, env);
+                Expr head = exprs.getFirst();
+                List<Expr> rest = exprs.subList(1, exprs.size());
+                yield switch (head) {
+                    case Expr.Atom(Token.Keyword(Keywords keywords)) -> switch (keywords) {
+                        case Keywords.DEF _ -> evalDef(rest, env);
+                        case Keywords.CONS _ -> evalCons(rest, env);
+                        case Keywords.CAR _ -> evalCar(rest, env);
+                        case Keywords.CDR _ -> evalCdr(rest, env);
+                        case Keywords.LIST _ -> evalList(rest, env);
+                        case Keywords.IF _ -> evalIf(rest, env);
+                        case Keywords.COND _ -> evalCond(rest, env);
+                        case Keywords.QUOTE _ -> evalQuote(rest, env);
+                        case Keywords.FN _ -> evalFn(rest, env);
+                        case Keywords.PROG _ -> evalProg(rest, env);
+
+                        default -> throw new EvalException("Unexpected keyword: " + keywords);
+                    };
+                    case Expr.Atom(Token.Operator(Operators operators)) -> switch (operators) {
+                        case Operators.Plus _ -> applyArithmetic(rest, (a, b) -> a + b, env);
+                        case Operators.Minus _ -> applyArithmetic(rest, (a, b) -> a - b, env);
+                        case Operators.Mul _ -> applyArithmetic(rest, (a, b) -> a * b, env);
+                        case Operators.Div _ -> applyArithmetic(rest, (a, b) -> a / b, env);
+                        case Operators.Mod _ -> applyArithmetic(rest, (a, b) -> a % b, env);
+                        case Operators.LeftShift _ -> applyArithmetic(rest, (a, b) -> a << b, env);
+                        case Operators.RightShift _ -> applyArithmetic(rest, (a, b) -> a >> b, env);
+
+                        case Operators.Gt _ -> applyComparator(rest, (a, b) -> a > b, env);
+                        case Operators.GtEq _ -> applyComparator(rest, (a, b) -> a >= b, env);
+                        case Operators.Lt _ -> applyComparator(rest, (a, b) -> a < b, env);
+                        case Operators.LtEq _ -> applyComparator(rest, (a, b) -> a <= b, env);
+                        case Operators.Eq _ -> applyComparator(rest, (a, b) -> a == b, env);
+                        case Operators.NotEq _ -> applyComparator(rest, (a, b) -> a != b, env);
+
+                        default -> throw new EvalException("Unsupported operator: " + operators);
+                    };
+                    case Expr.Atom(Token.Symbol(String fnName)) -> {
+                        Expr fn = env.get(fnName)
+                                .getOrThrow(() -> new EvalException("attempted to call undefined function: " + fnName));
+                        yield applyFn(fnName, fn, rest, env);
+                    }
+                    default -> {
+                        Expr fn = eval(head, env);
+                        List<Expr> args = rest.stream().map(e -> eval(e, env)).toList();
+                        yield applyFn("[dynamic]", fn, args, env);
+                    }
+                };
             }
-            default -> throw new EvalException("unknown list form");
+            default -> throw new EvalException("Unexpected value: " + expr);
         };
     }
 
-    private static Expr application(Expr expr, String name, List<Expr> args, Env env) {
-        return switch (expr) {
-            case Expr.Lambda(List<String> params, Expr body, Env closure) -> {
-                var substitutedArgs = args.stream().map(e -> eval(e, env)).toList();
-                var newEnv = Env.extend(closure);
+    private static Expr evalProg(List<Expr> args, Env env) {
+        if (args.isEmpty()) {
+            return BuiltinValue.NIL;
+        } else {
+            Expr res = BuiltinValue.NIL;
+            for (Expr arg : args) {
+                res = eval(arg, env);
+            }
+            return res;
+        }
+    }
+
+    private static Expr applyArithmetic(List<Expr> args, BinaryOperator<Integer> func, Env env) {
+        Integer result = args.stream().map(e -> eval(e, env)).map(e -> switch (e) {
+            case Expr.Atom(Token.Number(String n)) -> Integer.parseInt(n);
+            default -> throw new EvalException("expected number value, got " + e);
+        }).reduce(func).orElse(0);
+        return new Expr.Atom(new Token.Number(result.toString()));
+    }
+
+    private static Expr applyComparator(List<Expr> args, BiPredicate<Integer, Integer> predicate, Env env) {
+        if (args.size() == 2
+                && eval(args.getFirst(), env) instanceof Expr.Atom(Token.Number(String left))
+                && eval(args.getLast(), env) instanceof Expr.Atom(Token.Number(String right))) {
+            return predicate.test(Integer.parseInt(left), Integer.parseInt(right)) ? BuiltinValue.TRUE : BuiltinValue.FALSE;
+        } else {
+            throw new EvalException("expected 2 args of number type");
+        }
+    }
+
+    private static Expr evalFn(List<Expr> args, Env env) {
+        if (args.size() == 2 && args.getFirst() instanceof Expr.Vec(List<Expr> params)) {
+            List<String> paramsList = params.stream().map(param -> {
+                if (param instanceof Expr.Atom(Token.Symbol(String s))) {
+                    return s;
+                } else {
+                    throw new EvalException("expected symbol value, got " + param);
+                }
+            }).toList();
+            return new Expr.FN(paramsList, args.getLast());
+        } else {
+            throw new EvalException("invalid usage of 'fn'");
+        }
+    }
+
+    private static Expr applyFn(String fnName, Expr fn, List<Expr> args, Env env) {
+        return switch (fn) {
+            case Expr.FN(List<String> params, Expr body) -> {
+                List<Expr> substitutedArgs = args.stream().map(e -> eval(e, env)).toList();
+                Env newEnv = Env.extend(env);
                 if (params.size() == substitutedArgs.size()) {
                     for (int i = 0; i < params.size(); i++) {
                         newEnv.set(params.get(i), substitutedArgs.get(i));
@@ -235,60 +159,79 @@ public class Interpreter {
                     yield eval(body, newEnv);
                 } else {
                     throw new EvalException("called function "
-                        + name
-                        + " with "
-                        + args.size()
-                        + " argument(s), expected "
-                        + params.size()
-                        + " argument(s)");
+                            + fnName
+                            + " with "
+                            + args.size()
+                            + " argument(s), expected "
+                            + params.size()
+                            + " argument(s)");
                 }
             }
-            case Expr.Macro(List<String> params, Expr body, Env closure) -> {
-                var substitutedArgs = args.stream().map(e -> eval(e, env)).toList();
-                var newEnv = Env.extend(closure);
-                if (params.size() == substitutedArgs.size()) {
-                    for (int i = 0; i < params.size(); i++) {
-                        newEnv.set(params.get(i), substitutedArgs.get(i));
-                    }
-                    var expand = eval(body, newEnv);
-                    yield eval(expand, env);
-                } else {
-                    throw new EvalException("called macro "
-                        + name
-                        + " with "
-                        + args.size()
-                        + " argument(s), expected "
-                        + params.size()
-                        + " argument(s)");
-                }
-            }
-            case Expr.NativeFunc nativeFunc -> {
-                var func = nativeFunc.func();
-                yield func.apply(args.stream().map(e -> eval(e, env)).toList());
-            }
-            default -> throw new EvalException("expected function or macro, got " + expr);
+            default -> throw new EvalException("expected function, but got " + fn);
         };
     }
 
-    private static Function<List<Expr>, Expr> applyArithmetic(BinaryOperator<Integer> func) {
-        return args -> new Expr.Number(args.stream().map(e -> switch (e) {
-            case Expr.Number(Integer n) -> n;
-            default -> throw new EvalException("expected number value, got " + e);
-        }).reduce(func).orElse(0));
+    private static Expr evalCons(List<Expr> args, Env env) {
+        if (args.size() == 2 && eval(args.getLast(), env) instanceof Expr.Vec(List<Expr> exprs)) {
+            var res = new ArrayList<>(exprs);
+            res.addFirst(eval(args.getFirst(), env));
+            return new Expr.Vec(res);
+        }
+        throw new EvalException("invalid use of 'cons'");
     }
 
-    private static Function<List<Expr>, Expr> applyComparator(BiPredicate<Integer, Integer> predicate) {
-        return args -> {
-            if (args.size() == 2 && args.get(0) instanceof Expr.Number(Integer left) && args.get(1) instanceof Expr.Number(Integer right)) {
-                return predicate.test(left, right) ? BuiltinValue.TRUE : BuiltinValue.FALSE;
-            } else {
-                throw new EvalException("expected 2 args of number type");
-            }
-        };
+    private static Expr evalCar(List<Expr> args, Env env) {
+        if (args.size() == 1 && eval(args.getFirst(), env) instanceof Expr.Vec(List<Expr> exprs)) {
+            return exprs.isEmpty() ? BuiltinValue.NIL : exprs.getFirst();
+        }
+        throw new EvalException("cannot use 'car' on non-list value");
     }
 
-    private static final class BuiltinValue {
-        private static final Expr TRUE = new Expr.Symbol("#t");
-        private static final Expr FALSE = new Expr.Symbol("#f");
+    private static Expr evalCdr(List<Expr> args, Env env) {
+        if (args.size() == 1 && eval(args.getFirst(), env) instanceof Expr.Vec(List<Expr> exprs)) {
+            return exprs.isEmpty() ? BuiltinValue.NIL : new Expr.Vec(exprs.subList(1, exprs.size()));
+        }
+        throw new EvalException("cannot use 'cdr' on non-list value");
+    }
+
+    private static Expr evalQuote(List<Expr> args, Env env) {
+        if (args.size() == 1) {
+            return new Expr.Quote(args.getFirst());
+        } else {
+            throw new EvalException("invalid usage of 'quote'");
+        }
+    }
+
+    private static Expr evalList(List<Expr> args, Env env) {
+        return new Expr.Vec(args);
+    }
+
+    private static Expr evalDef(List<Expr> args, Env env) {
+        if (args.size() == 2 && args.getFirst() instanceof Expr.Atom(Token.Symbol(String s))) {
+            Expr value = eval(args.get(1), env);
+            env.set(s, value);
+            return value;
+        } else {
+            throw new EvalException("invalid usage of 'def'");
+        }
+    }
+
+    private static Expr evalIf(List<Expr> args, Env env) {
+        if (args.size() == 3) {
+            Expr test = args.get(0);
+            Expr conseq = args.get(1);
+            Expr alt = args.get(2);
+            Expr expr = eval(test, env) == BuiltinValue.TRUE ? conseq : alt;
+            return eval(expr, env);
+
+        } else {
+            throw new EvalException("invalid usage of 'if'");
+        }
+    }
+
+    private static Expr evalCond(List<Expr> args, Env env) {
+        // Todo
+        // support pattern matching
+        return null;
     }
 }
